# django-hexgrid

./: README.md  manage.py  pyproject.toml
hexgrid/: apps.py  models.py
hexgrid/migrations/: 0001_create_hex.py
localdev/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
localdev/migrations/: 0001_initial.py
localdev/static/: hex.css
localdev/templates/: cell.html
