[tool.poetry]
name = "django-hexgrid"
version = "0.1.0"
description = "A Django implementation of hexagonal grids."
authors = ["Matt Cooper <vtbassmatt@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/vtbassmatt/django-hexgrid"
repository = "https://github.com/vtbassmatt/django-hexgrid"
keywords = [
  "grid",
  "hexagon",
  "django",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Topic :: Games/Entertainment",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries",
]
packages = [
  { include = "hexgrid" },
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
